--- a/6step/main.css
+++ b/6step/main.css
@@ -5,4 +5,68 @@
     --main-color: #5d9ab2;
     --accent-color: #bf6a7a;
     --back-color: #2b5566;
+    --text-bright: #fff;
+}
+
+/* 基本設定　ページ全体 */
+body{
+    font-family:  'メイリオ','Hiragino Kaku Gorhic Pro',sans-serif;
+    margin: 0;
+}
+
+/* コンテンツA ヒーローイメージ */
+.conA{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    min-height: 450px;
+    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../6step/img/fruits.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color:  var(--text-bright);
+}
+
+.conA h1{
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size:15vw;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 0.2rem;
+    margin-left: 0.2rem;
+}
+
+.conA p{
+    font-size: 18px;
+}
+
+.conA img{
+    width:20%;
+}
+
+.conA a{
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 30px;
+    border-radius: 6px;
+    background-color: var(--accent-color);
+    color: var(--text-bright);
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.conA a:hover{
+    background-image: linear-gradient(rgba(225,225,225,0.2),rgba(225,225,225,0.2));
+}
+
+@media (min-width: 768px) {
+    .conA h1{
+        margin-bottom: 10px;
+        font-size:115px;
+    }
+    
+    .conA p{
+        font-size: 24px;
+    }
 }
