step5: HTML/CSS

--- a/6step/main.css
+++ b/6step/main.css
@@ -670,3 +670,58 @@ header{
     font-size: 1.5rem;
     text-align: center;
 }
+
+/* list.html */
+.conA.compact{
+    height: 450px;
+    min-height: 0;
+    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../6step/img/balloon.jpg);
+}
+
+.listA h1{
+    text-align: center;
+}
+
+.listA .container{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: var(--large-width);
+    margin:  30px auto;
+}
+
+.listA article{
+    flex: 1 1 300px;
+    display: flex;
+}
+
+.listA a{
+    flex:1;
+    margin: 10px;
+    display: block;
+    border: solid 1px #ddd;
+    color: inherit;
+    text-decoration: none;
+}
+
+.listA a:hover{
+    opacity: 0.8;
+}
+
+.listA .photo{
+    min-height: 150px;
+    background-position: center;
+    background-size: cover;
+}
+
+.listA .text{
+    margin:10px;
+}
+
+.listA h2{
+    font-size: 18px;
+}
+
+.listA p{
+    font-size: 14px;
+    opacity: 0.8;
+}
